<resources>
    <string name="lab_name">SantosJonahmaeLab5</string>
    <string name="app_name">Activity 1</string>
    <string name="app_name2">Activity 2</string>
    <string name="Header">Venice Grand Canal</string>
    <string name="Body">Location: McKinley Hill Garden Villas, Cluster-B,Upper McKinley Rd, Taguig,</string>
    <string name="Body2">Distance From UST: 14.6 km</string>
    <string name="Button1">Activity 2</string>
    <string name="Button2">Map</string>
    <string name="Button3">Activity 1</string>
    <string name="HeaderAct2">Intramuros</string>
    <string name="BodyAct2">Location:   Bonifacio Dr , Padre Burgos St, Manila, Luzon 1002, Philippines</string>
    <string name="Body2Act2">Distance From UST: 3.7 km </string>
</resources>
