<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <ImageView
        android:id="@+id/imageView3"
        style="@style/Border"
        android:layout_width="418dp"
        android:layout_height="222dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/intramuros" />

    <TextView
        android:id="@+id/textView14"
        style="@style/CustomHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/HeaderAct2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView15"
        style="@style/CustomBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BodyAct2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView17"
        style="@style/CustomBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Body2Act2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />


    <Button
        android:id="@+id/Activity1btn"
        style="@style/CustomButtonStyle"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:onClick="process"
        android:text="@string/Button3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnMap"
        style="@style/CustomButtonStyle"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:onClick="process"
        android:text="@string/Button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>